--- a/readthedocsext/theme/templates/profiles/partials/profile_project_list.html
+++ b/readthedocsext/theme/templates/profiles/partials/profile_project_list.html
@@ -1,15 +1,9 @@
 {% extends "projects/partials/project_list.html" %}
 
-{% load i18n %}
+{% load blocktrans from i18n %}
 
 {# TODO drop this override if we add filtering to the profile page #}
 {% block top_menu %}
-  {# Pass Django template tag specific configuration into ``ProjectListView`` #}
-  <script type="application/json" data-bind="jsonInit: config">
-    {
-      "api_url": "{% url "projects-list" %}"
-    }
-  </script>
 {% endblock top_menu %}
 
 {% block create_button %}
