Review changes to url attribute

--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -38,7 +38,7 @@
       </readthedocs-item-docs>
       <button class="ui dropdown button">
         <i class="fa-solid fa-ellipsis icon"></i>
-        <readthedocs-menu-project-admin class="menu" settings="{% url "projects_edit" object.slug %}">
+        <readthedocs-menu-project-admin class="menu" url-settings="{% url "projects_edit" object.slug %}">
         </readthedocs-menu-project-admin>
       </button>
     </div>
