Use `centered fluid wrapping`
https://fomantic-ui.com/collections/menu.html#centered-fluid-wrapping

--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -41,7 +41,7 @@
     </div>
 
     {% if form.enabled.value == True %}
-      <div class="ui top attached stackable wrapping menu"
+      <div class="ui top attached stackable centered fluid wrapping menu"
            data-bind="semanticui: {tabs: {history: true, autoTabActivation: false}}">
         <a class="active item" data-tab="flyout">{% trans "Flyout menu" %}</a>
         <a class="item" data-tab="search">{% trans "Search" %}</a>
