--- a/readthedocsext/theme/templates/includes/elements/chips/base.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/base.html
@@ -67,8 +67,7 @@
       </div>
     {% endblock chip_detail %}
   </a>
-  <div class="ui flowing popup"
-       data-bind="using: data">
+  <div class="ui flowing popup" data-bind="using: data">
     <div class="ui small basic horizontal card"
          data-bind="css: { loading: $parent.is_loading() }">
 
