Update plausible jQuery plugin
- Support properties via added `data-analytics-property-*` attributes
- Fix bug with logic around multiple events. Previously the first event
  returned would redirect the link. I'm note sure multiple events are
  necessary either way though.
- Clean up code

--- a/readthedocsext/theme/templates/includes/filters/form.html
+++ b/readthedocsext/theme/templates/includes/filters/form.html
@@ -37,7 +37,7 @@
                   </div>
                 {% endif %}
                 {% for value, label in field.field.widget.choices %}
-                  <a class="item" data-value="{{ value }}">{{ label|safe }}</a>
+                  <a class="item" data-value="{{ value }}" data-analytics-events="filter-activated" data-analytics-property-filter="{{ label|safe }}">{{ label|safe }}</a>
                 {% endfor %}
               </div>
             </div>
