--- a/readthedocsext/theme/templates/includes/filters/form.html
+++ b/readthedocsext/theme/templates/includes/filters/form.html
@@ -5,12 +5,15 @@
     </div>
     {% for field in fields %}
       {% if field.is_hidden %}
-        <input type="hidden" name="{{ field.name }}" value="{% if field.value.0|length == 1 %}{{ field.value|default:"" }}{% else %}{{ field.value.0|default:"" }}{% endif %}" />
+        <input type="hidden"
+               name="{{ field.name }}"
+               value="{% if field.value.0|length == 1 %}{{ field.value|default:"" }}{% else %}{{ field.value.0|default:"" }}{% endif %}" />
       {% else %}
         <div class="item">
           <div class="content">
-            <div class="ui manual {% if field.field.has_search %}scrolling{% endif %} filter dropdown" data-bind="semanticui: {dropdown: filter_config}">
-            {% comment %}
+            <div class="ui manual {% if field.field.has_search %}scrolling{% endif %} filter dropdown"
+                 data-bind="semanticui: {dropdown: filter_config}">
+              {% comment %}
               Django-filter sometimes returns a string for the value, sometimes a list.
               Django doesn't surface a way to do this check in templates and this
               doesn't warrant a custom filter. This is a hack for now, I'm sorry.
@@ -21,13 +24,15 @@
               This assumes if the first element length == 1, we are iterating
               over a string (iterable of characters). So, uh, don't use field
               values of length 1.
-            {% endcomment %}
-              <input type="hidden" name="{{ field.name }}" value="{% if field.value.0|length == 1 %}{{ field.value|default:"" }}{% else %}{{ field.value.0|default:"" }}{% endif %}" />
+              {% endcomment %}
+              <input type="hidden"
+                     name="{{ field.name }}"
+                     value="{% if field.value.0|length == 1 %}{{ field.value|default:"" }}{% else %}{{ field.value.0|default:"" }}{% endif %}" />
               <div class="ui sub header">
                 {{ field.label|safe }}
                 <i class="fa-solid fa-caret-down small icon"></i>
               </div>
-            {# This is filled using the FUI `activate` action on the dropdown #}
+              {# This is filled using the FUI `activate` action on the dropdown #}
               <div class="text"></div>
               <div class="menu">
                 {% if field.field.has_search %}
@@ -37,7 +42,10 @@
                   </div>
                 {% endif %}
                 {% for value, label in field.field.widget.choices %}
-                  <a class="item" data-value="{{ value }}">{{ label|safe }}</a>
+                  <a class="item"
+                     data-value="{{ value }}"
+                     data-analytics-events="filter-activated"
+                     data-analytics-property-filter="{{ label|safe }}">{{ label|safe }}</a>
                 {% endfor %}
               </div>
             </div>
