--- a/readthedocsext/theme/templates/organizations/settings/organization_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/organization_edit.html
@@ -1,6 +1,6 @@
 {% extends "organizations/settings/base.html" %}
 
-{% load trans blocktrans i18n %}
+{% load trans blocktrans from i18n %}
 {% load crispy from crispy_forms_tags %}
 
 {% block title %}
