Addons: add "flyout position" to the form
Required by https://github.com/readthedocs/addons/issues/434

--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -67,6 +67,7 @@
           {{ form.flyout_sorting | as_crispy_field }}
           {{ form.flyout_sorting_latest_stable_at_beginning | as_crispy_field }}
           {{ form.flyout_sorting_custom_pattern | as_crispy_field }}
+          {{ form.flyout_position | as_crispy_field }}
         </div>
       {% endblock addons_flyout %}
 
