Warn about changing a version slug
Ref https://github.com/readthedocs/readthedocs.org/pull/11930

--- a/readthedocsext/theme/templates/projects/version_form.html
+++ b/readthedocsext/theme/templates/projects/version_form.html
@@ -53,7 +53,7 @@
           <div class="content">
             {% if version.active %}
               <div class="ui warning message">
-                {% trans "Deactivating a version will result in the deletion of its documentation." %}
+                {% trans "Deactivating a version or changing its slug will result in the deletion of its documentation." %}
               </div>
             {% endif %}
 
