--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -49,7 +49,7 @@
         <a class="item" data-tab="analytics">{% trans "Analytics" %}</a>
         <a class="item" data-tab="docdiff">{% trans "Visual diff" %}</a>
         {# Only show File Tree Diff if it was previously enabled from Django Admin #}
-        {% if form.filetreediff_enabled %}
+        {% if form.filetreediff_enabled.data is not None %}
           <a class="item" data-tab="filetreediff">{% trans "File tree diff" %}</a>
         {% endif %}
         <a class="item" data-tab="link-previews">{% trans "Link previews" %}</a>
@@ -103,7 +103,7 @@
       {% endblock addons_docdiff %}
 
       {% block addons_filetreediff %}
-        {% if form.filetreediff_enabled %}
+        {% if form.filetreediff_enabled.data is not None %}
           <div class="ui tab" data-tab="filetreediff">
             {{ form.filetreediff_enabled | as_crispy_field }}
             {{ form.filetreediff_ignored_files | as_crispy_field }}
