--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -48,6 +48,7 @@
         <a class="item" data-tab="notifications">{% trans "Notifications" %}</a>
         <a class="item" data-tab="analytics">{% trans "Analytics" %}</a>
         <a class="item" data-tab="docdiff">{% trans "Visual diff" %}</a>
+        <a class="item" data-tab="filetreediff">{% trans "File tree diff" %}</a>
         <a class="item" data-tab="link-previews">{% trans "Link previews" %}</a>
         <a class="item" data-tab="hotkeys">{% trans "Hotkeys" %}</a>
         <a class="item" data-tab="advanced">{% trans "Advanced" %}</a>
@@ -97,6 +98,13 @@
           {{ form.doc_diff_enabled | as_crispy_field }}
         </div>
       {% endblock addons_docdiff %}
+
+      {% block addons_filetreediff %}
+        <div class="ui tab" data-tab="filetreediff">
+          {{ form.filetreediff_enabled | as_crispy_field }}
+          {{ form.filetreediff_ignored_files | as_crispy_field }}
+        </div>
+      {% endblock addons_filetreediff %}
 
       {% block addons_link_previews %}
         <div class="ui tab" data-tab="link-previews">
