--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -51,8 +51,7 @@
 
       {% if USE_ORGANIZATIONS %}
         <a class="item"
-          {# Link to the old dashboard, since the new dashboard doesn't work for granting access to docs pages yet #}
-          href="https://readthedocs.com{% url "saml_resolve_login" %}{% if redirect_field_value %}?{{ redirect_field_name }}={{ redirect_field_value }}{% endif %}">
+           href="{% url "saml_resolve_login" %}{% if redirect_field_value %}?{{ redirect_field_name }}={{ redirect_field_value }}{% endif %}">
           <i class="fas fa-shield-alt icon"></i>
           {% trans "Single sign-on" %}
         </a>
