--- a/readthedocsext/theme/templates/account/signup.html
+++ b/readthedocsext/theme/templates/account/signup.html
@@ -19,7 +19,7 @@
   {% trans "Sign up with email" %}
 {% endblock authentication_email_text %}
 {% block authentication_header_text %}
-  {% trans "Sing up using:" %}
+  {% trans "Sign up using:" %}
 {% endblock authentication_header_text %}
 
 {% block authentication_vcs %}
